# MIPS-Processor-Simulator

./: README.md
CompEngCw/: ALU.cpp  ALU.h  ALUOut.cpp  ALUOut.h  Control.cpp  Control.h  InstructionRegister.cpp  InstructionRegister.h  Memory.cpp  Memory.h  MemoryDataRegister.cpp  MemoryDataRegister.h  PC.cpp  PC.h  README.md  RegisterFile.cpp  RegisterFile.h  ShowcaseProgram.txt  TestBench.cpp  TestBench.h  TestProgram1.txt  TestProgram2.txt  TestProgram3.txt  Translator.cpp  Translator.h  main.cpp  tempRegisterA.cpp  tempRegisterA.h  tempRegisterB.cpp  tempRegisterB.h
Simulator/: ALU.cpp  ALU.h  ALUOut.cpp  ALUOut.h  CMakeLists.txt  Control.cpp  Control.h  InstructionRegister.cpp  InstructionRegister.h  Memory.cpp  Memory.h  MemoryDataRegister.cpp  MemoryDataRegister.h  PC.cpp  PC.h  RegisterFile.cpp  RegisterFile.h  ShowcaseProgram.txt  TestBench.cpp  TestBench.h  TestProgram1.txt  TestProgram2.txt  TestProgram3.txt  Translator.cpp  Translator.h  tempRegisterA.cpp  tempRegisterA.h  tempRegisterB.cpp  tempRegisterB.h
Test Programs/Showcase Program/: ShowcaseA.asm
Test Programs/Showcase Program/ShowcaseA/: CMakeLists.txt  main.c
Test Programs/Test Program 1/: TestProgram1.asm
Test Programs/Test Program 1/Test1/: CMakeLists.txt  main.c
Test Programs/Test Program 2/: TestProgram2.asm
Test Programs/Test Program 2/TestProgram2/: CMakeLists.txt  main.c
